@@ -1,3 +1,7 @@
+2000-10-17  Mikhael Goikhman  <migo@homemail.com>
+
+	* acinclude.m4: fixed gnome detection outside of X
+
 2000-10-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/functions.c (expand):
